--- a/arvoredehabilidades/index.html
+++ b/arvoredehabilidades/index.html
@@ -106,7 +106,7 @@
           <p>
             Um sistema que automatiza a geração de relatórios, integrando dados de diversas fontes e permitindo análises dinâmicas, utilizando Python e PostgreSQL.
           </p>
-          <a href="https://github.com/seuusuario/gerador-relatorios" target="_blank">Ver no GitHub</a>
+          <a href="https://github.com/GuilhermePelegriniSilva/MyRepository/blob/main/PythonUSP/relatoriopythonpdf.py" target="_blank">Ver no GitHub</a>
         </div>
         <!-- Projeto 2: Árvore de Habilidades em Front End -->
         <div class="project-card">
@@ -115,16 +115,16 @@
           <p>
             Um projeto interativo que exibe suas competências em Front End por meio de uma visualização em árvore, utilizando HTML, CSS e JavaScript para um layout responsivo.
           </p>
-          <a href="https://github.com/seuusuario/arvore-front-end" target="_blank">Ver no GitHub</a>
+          <a href="https://github.com/GuilhermePelegriniSilva/MyRepository/blob/main/arvoredehabilidades/index.html" target="_blank">Ver no GitHub</a>
         </div>
         <!-- Projeto 3: Calculadora de Juros para Android -->
         <div class="project-card">
           <img src="imagemcalculadora.png" alt="Calculadora de Juros para Android" />
           <h3>Calculadora de Juros para Android</h3>
           <p>
-            Um aplicativo Android desenvolvido em Android Studio com Java/Kotlin que calcula juros compostos, oferecendo uma interface intuitiva e interativa.
+            Um aplicativo Android desenvolvido em Web com JavaScript que calcula juros compostos, oferecendo uma interface intuitiva e interativa.
           </p>
-          <a href="https://github.com/seuusuario/calculadora-juros" target="_blank">Ver no GitHub</a>
+          <a href="https://github.com/GuilhermePelegriniSilva/MyRepository/blob/main/calculadorajurosjs/indexcalculadoradejuros.html" target="_blank">Ver no GitHub</a>
         </div>
       </div>
     </section>
