--- a/trabalhointerfacehumanocomputador/prototipotelacadastro.html
+++ b/trabalhointerfacehumanocomputador/prototipotelacadastro.html
@@ -20,20 +20,21 @@
     <main>
         <h1>Cadastro de Produto</h1>
         <form id="cadastroForm">
-            <label for="nome">Nome:</label>
+            <label for="nome">Nome do produto:</label>
             <input type="text" id="nome" name="nome" required placeholder="Digite o nome do produto"><br>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required placeholder="Digite seu e-mail"><br>
+            <label for="preco">Preço:</label>
+            <input type="number" id="preco" name="preco" required placeholder="Digite o preço"><br>
 
-            <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" name="telefone" required placeholder="(XX) XXXX-XXXX"><br>
+            <label for="categoria">Categoria:</label>
+            <select id="categoria" name="categoria">
+                <option value="Alimentos">Alimentos</option>
+                <option value="Eletrônicos">Eletrônicos</option>
+                <option value="Vestuário">Vestuário</option>
+            </select><br>
 
-            <label for="endereco">Endereço:</label>
-            <input type="text" id="endereco" name="endereco" required placeholder="Digite seu endereço"><br>
-
-            <label for="cartao">Cartão de Crédito:</label>
-            <input type="text" id="cartao" name="cartao" required placeholder="XXXX XXXX XXXX XXXX"><br>
+            <label for="descricao">Descrição:</label>
+            <textarea id="descricao" name="descricao" required placeholder="Digite uma breve descrição"></textarea><br>
 
             <button type="submit">Cadastrar</button>
         </form>
@@ -41,7 +42,7 @@
     </main>
 
     <footer>
-        <p>Esse é um código de um projeto de Interface Humano-Computador que demonstra uma tela de cadastro de um supermercado.</p>
+        <p>Esse é um projeto de Interface Humano-Computador que demonstra uma tela de cadastro de um supermercado.</p>
     </footer>
 
     <script src="script.js"></script>
